--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,20 +1,20 @@
 default_roles:
-  - system
+  # - system
   # - bash
-  - docker
-  - git
-  - go
+  #- docker
+  #- git
+  #- go
   # - helm
-  - k8s
-  - neofetch
+  #- k8s
+  #- neofetch
   - neovim
-  - python
-  - rust
-  - ssh
-  - sshfs
-  - terraform
+  #- python
+  #- rust
+  #- ssh
+  #- sshfs
+  #- terraform
   # - tmux
-  - zsh
+  #- zsh
 
 git_user_name: "Eusebio Resende"
 
