Remove localhost warnings

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
+localhost_warning=False
 stdout_callback = beautiful_output
 bin_ansible_callbacks = True
+
+[inventory]
+inventory_unparsed_warning=False
