Update lunarvim role

--- a/roles/lunarvim/tasks/main.yml
+++ b/roles/lunarvim/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
 
-- name: "Lunarvim | Ensure user bin directory exists"
-  ansible.builtin.file:
-    dest: "{{ ansible_user_dir }}/.local/bin"
-    state: directory
-    mode: "0755"
+- name: "Lunarvim | Install Lunarvim"
+  ansible.builtin.command: |
+    bash <(curl -s https://raw.githubusercontent.com/lunarvim/lunarvim/master/utils/installer/install.sh) -y
 
 - name: "Lunarvim | Ensure lvim config directory exists"
   ansible.builtin.file:
@@ -12,13 +10,7 @@
     state: directory
     mode: "0755"
 
-- name: "Lunarvim | Copy executable"
-  ansible.builtin.copy:
-    src: "lvim"
-    dest: "{{ ansible_user_dir }}/.local/bin"
-    mode: "0755"
-
-- name: "Lunarvim | Copy config files"
+- name: "Lunarvim | Copy my own config file"
   ansible.builtin.copy:
     src: "config.lua"
     dest: "{{ ansible_user_dir }}/.config/lvim"
