--- a/roles/lunarvim/tasks/main.yml
+++ b/roles/lunarvim/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: "Lunarvim | Downloading Lunarvim install script"
   ansible.builtin.get_url:
-    url: "https://raw.githubusercontent.com/lunarvim/lunarvim/master/utils/installer/install.s"
+    url: "https://raw.githubusercontent.com/lunarvim/lunarvim/master/utils/installer/install.sh"
     dest: /tmp/
     mode: "0644"
     force: true
