--- a/roles/tmux/files/tmux/tmux.conf
+++ b/roles/tmux/files/tmux/tmux.conf
@@ -1,67 +1,71 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
-set -g default-terminal "tmux-256color"
-set -g terminal-overrides ',xterm-256color:RGB'
-set -g mouse on
-set -sg escape-time 0
-set -g base-index 1              # Start indexing windows at 1 instead of 0
-set -g pane-base-index 1         # Same for panes
-setw -g pane-base-index 1        # Same for panes
-set -g renumber-windows on       # Re-index windows when a window is closed
-set -g history-limit 1000000     # Set history limit to 1000000
-set -g mode-keys vi              # Set vi mode
-set -g status-position top       # Set status bar to top
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# reload tmux config file
+bind r source-file ~/.tmux.conf
+
+# add mouse support
+set-window-option -g mouse on
+
+# other options
+#set-window-option -g status-left " #S "
+
+# tells applications inside tmux about terminal capabilities
+set -g default-terminal "screen-256color"
+
+# set vi mode navigation for the window
+setw -g mode-keys vi
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# switch panes using Alt-arrow without prefix
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# Increase scroll history
+set -g history-limit 50000
+
+# more frequent updates
 set -g status-interval 1
 
-bind-key -n Home send Escape "OH"                    # Fix Home Key
-bind-key -n End send Escape "OF"                     # Fix End  Key
-bind-key -n M-H previous-window                      # Alt + Shift + h
-bind-key -n M-L next-window                          # Alt + Shift + l
-bind-key '"' split-window -c "#{pane_current_path}"  # Horizontal Split window with current path
-bind-key % split-window -h -c "#{pane_current_path}" # Vertical Split window with current path
-bind-key -r -T prefix C-Up    resize-pane -U         # Resize pane up
-bind-key -r -T prefix C-Down  resize-pane -D         # Resize pane down
-bind-key -r -T prefix C-Left  resize-pane -L         # Resize pane left
-bind-key -r -T prefix C-Right resize-pane -R         # Resize pane right
+# Start windows and panes index at 1, not 0.
+set -g base-index 1
+setw -g pane-base-index 1
 
-set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
-set -g @fzf-url-history-limit '2000'
+# Start windows and panes index at 1, not 0.
+set -g base-index 1
+setw -g pane-base-index 1
 
+# Allow tmux to set the title of the terminal emulator
+#set -g set-titles on
+#set -g set-titles-string "#S"
 
+# Reload the tmux config.
+unbind r
+bind r source-file ~/.tmux.conf
+
+# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'sainnhe/tmux/fzf'
-set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @catppuccin_date_time "%H:%M:%S CST %m-%d-%Y"
+set -g @plugin 'dracula/tmux'
 
-set -g @sessionx-bind 'o'
-set -g @sessionx-preview-location 'right'
-set -g @sessionx-zoxide-mode 'on'
-set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory meetings date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_date_time_text "%H:%M"
+# Dracula Status bar config
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Dublin City"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-left-icon session
+set -g status-position top
+# does not work when dracula is enabled :(
+set -g window-status-current-format '#[fg=magenta,bg=#1e1e2e]*#I #W#{?window_zoomed_flag,(),} '
 
-run -b '~/.tmux/plugins/tpm/tpm'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
