--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -8,6 +8,12 @@
   ansible.builtin.include_tasks: "{{ ansible_distribution }}.yml"
   when: tmux_distribution_config.stat.exists
 
+- name: "Tmux | Generate locales"
+  community.general.locale_gen:
+    name: en_US.UTF-8
+    state: present
+  become: true
+
 - name: "Tmux | Install TPM"
   ansible.builtin.git:
     repo: https://github.com/tmux-plugins/tpm
@@ -20,3 +26,7 @@
     mode: "0644"
     directory_mode: "0755"
     force: true
+
+- name: "Tmux | Install Plugins"
+  ansible.builtin.command:
+    cmd: "{{ ansible_user_dir }}/.tmux/plugins/tpm/scripts/install_plugins.sh"
