--- a/roles/neovim/tasks/Ubuntu.yml
+++ b/roles/neovim/tasks/Ubuntu.yml
@@ -12,6 +12,12 @@
     state: present
   become: true
 
+- name: "Neovim | {{ ansible_distribution }} | Install PPA Repo"
+  ansible.builtin.apt_repository:
+    repo: ppa:neovim-ppa/unstable
+    state: present
+  become: true
+
 - name: "Neovim | {{ ansible_distribution }} | Install"
   ansible.builtin.apt:
     name: neovim
