Update ZSH role with new installation instructions

--- a/roles/zsh/tasks/Ubuntu.yml
+++ b/roles/zsh/tasks/Ubuntu.yml
@@ -12,6 +12,8 @@
       - wget
       - git
       - zsh
+      - zsh-syntax-highlighting
+      - zsh-autosuggestions
     state: present
   become: true
 
