--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -8,6 +8,23 @@
   ansible.builtin.include_tasks: "{{ ansible_distribution }}.yml"
   when: zsh_distribution_config.stat.exists
 
+- name: "zsh | install powerlevel10k theme"
+  ansible.builtin.git:
+    repo: https://github.com/romkatv/powerlevel10k.git
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/themes/powerlevel10k"
+    version: "v1.20.0"
+    depth: 1
+
+- name: "zsh | install zsh-syntax-highlighting plugin"
+  ansible.builtin.git:
+    repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"
+
+- name: "zsh | install zsh-autosuggestions plugin"
+  ansible.builtin.git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions.git
+    dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/plugins/zsh-autosuggestions"
+
 - name: "Zsh | Install custom config files"
   ansible.builtin.copy:
     src: "files/{{ item }}"
@@ -18,6 +35,6 @@
 
 - name: "Zsh | Install config files"
   ansible.builtin.copy:
-    src: files/.zshrc
-    dest: "{{ ansible_user_dir}}/"
+    src: files/zshrc
+    dest: "{{ ansible_user_dir}}/.zshrc"
 
