--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -44,7 +44,7 @@
     name: user.email
     scope: global
     value: "{{ git_user_email }}"
-  no_log: true
+  no_log: false
 
 - name: "Git | Set user.name"
   community.general.git_config:
@@ -56,40 +56,54 @@
   community.general.git_config:
     name: user.signingkey
     scope: global
-    value: "{{ ansible_user_dir }}/.ssh/id_ed25519.pub"
+    value: "{{ ansible_user_dir }}/.ssh/id_rsa.pub"
 
-- name: "Git | Set gpg.format"
+- name: "Git | Set alias"
   community.general.git_config:
-    name: gpg.format
+    name: "alias.{{ item.name }}"
     scope: global
-    value: ssh
+    value: "{{ item.value }}"
+  loop:
+    - { name: "st", value: "status" }
+    - { name: "co", value: "checkout" }
+    - { name: "ci", value: "commit" }
+    - { name: "br", value: "branch" }
+    - { name: "bra", value: "branch -a" }
+    - { name: "p", value: "pull -p" }
+    - { name: "f", value: "fetch -p" }
 
-- name: "Git | Set commit.gpgsign"
-  community.general.git_config:
-    name: commit.gpgsign
-    scope: global
-    value: true
+# - name: "Git | Set gpg.format"
+#   community.general.git_config:
+#     name: gpg.format
+#     scope: global
+#     value: ssh
 
-- name: "Git | Set tag.gpgsign"
-  community.general.git_config:
-    name: tag.gpgsign
-    scope: global
-    value: true
+# - name: "Git | Set commit.gpgsign"
+#   community.general.git_config:
+#     name: commit.gpgsign
+#     scope: global
+#     value: true
 
-- name: "Git | Ensure ~/.config/git/allowed_signers exists"
-  ansible.builtin.file:
-    path: "{{ ansible_user_dir }}/.config/git"
-    state: directory
-    mode: "0755"
+# - name: "Git | Set tag.gpgsign"
+#   community.general.git_config:
+#     name: tag.gpgsign
+#     scope: global
+#     value: true
 
-- name: "Git | Configure ~/.config/git/allowed_signers"
-  ansible.builtin.copy:
-    src: allowed_signers
-    dest: "{{ ansible_user_dir }}/.config/git/allowed_signers"
-    mode: "0600"
+# - name: "Git | Ensure ~/.config/git/allowed_signers exists"
+#   ansible.builtin.file:
+#     path: "{{ ansible_user_dir }}/.config/git"
+#     state: directory
+#     mode: "0755"
 
-- name: "Git | Set gpg.ssh.allowedSignersFile"
-  community.general.git_config:
-    name: gpg.ssh.allowedSignersFile
-    scope: global
-    value: "{{ ansible_user_dir }}/.config/git/allowed_signers"
+# - name: "Git | Configure ~/.config/git/allowed_signers"
+#   ansible.builtin.copy:
+#     src: allowed_signers
+#     dest: "{{ ansible_user_dir }}/.config/git/allowed_signers"
+#     mode: "0600"
+
+# - name: "Git | Set gpg.ssh.allowedSignersFile"
+#   community.general.git_config:
+#     name: gpg.ssh.allowedSignersFile
+#     scope: global
+#     value: "{{ ansible_user_dir }}/.config/git/allowed_signers"
