--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -30,8 +30,9 @@
     src: "files/{{ item }}"
     dest: "{{ ansible_user_dir }}/.oh-my-zsh/custom/{{ item }}"
   loop:
-    - p10k.zsh
     - alias.zsh
+    - p10k.zsh
+    - npm.zsh
 
 - name: "Zsh | Install config files"
   ansible.builtin.copy:
